[gd_scene load_steps=3 format=3 uid="uid://bbplxfw06opmb"]

[ext_resource type="Script" path="res://npc/DialogBox.gd" id="1_o58ck"]
[ext_resource type="Script" path="res://npc/Dialog.gd" id="1_opocp"]

[node name="Dialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 167.0
offset_top = -3.0
offset_right = 167.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_opocp")

[node name="DialogBox" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 790.0
offset_right = 924.0
offset_bottom = 1044.0
script = ExtResource("1_o58ck")

[node name="Name" type="RichTextLabel" parent="DialogBox"]
layout_mode = 0
offset_right = 450.0
offset_bottom = 68.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 46
text = "Name Goes Here"

[node name="Text" type="RichTextLabel" parent="DialogBox"]
layout_mode = 0
offset_left = 30.0
offset_top = 54.0
offset_right = 862.0
offset_bottom = 254.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
text = "Words Go here"

[node name="Anubis" type="Sprite2D" parent="DialogBox"]
visible = false
position = Vector2(-103, 52)
scale = Vector2(2.06082, 2.18818)

[node name="CrocBro" type="Sprite2D" parent="DialogBox"]
position = Vector2(-158, 106)
scale = Vector2(0.316, 0.335)

[node name="Goddess" type="Sprite2D" parent="DialogBox"]
position = Vector2(1057, 58)

[node name="Timer" type="Timer" parent="DialogBox"]

[connection signal="open_heaven_dialog" from="." to="DialogBox" method="_on_dialog_open_heaven_dialog"]
[connection signal="open_hell_dialog" from="." to="DialogBox" method="_on_dialog_open_hell_dialog"]
[connection signal="open_tinder_dialog" from="." to="DialogBox" method="_on_dialog_open_tinder_dialog"]
[connection signal="dialog_closed" from="DialogBox" to="." method="_on_dialog_box_dialog_closed"]
